Experimental/kubernetes-deployment/keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (HEAD)
  creationTimestamp: null
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: keycloak
    spec:
      containers:
      - env:
        - name: DB_ADDR
          valueFrom:
            configMapKeyRef:
              name: keycloak-config
              key: db_addr
        - name: DB_DATABASE
          value: keycloak
        - name: DB_PASSWORD
          value: password
        - name: DB_SCHEMA
          value: public
        - name: DB_USER
          value: keycloak
        - name: DB_VENDOR
          value: POSTGRES
        - name: KEYCLOAK_PASSWORD
          value: admin
        - name: KEYCLOAK_USER
          value: admin
        - name: PROXY_ADDRESS_FORWARDING
          value: "true"
        - name: KC_HOSTNAME_STRICT_HTTPS
          value: "false"
        image: jboss/keycloak:11.0.0
        name: keycloak
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /tmp/config/
          name: keycloak-claim0
      restartPolicy: Always
      volumes:
      - name: keycloak-claim0
        persistentVolumeClaim:
          claimName: keycloak-claim0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (HEAD)
  creationTimestamp: null
  labels:
    app: keycloak
  name: keycloak
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  rules:
  - host: "keycloak.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port: 
              number: 8080
